--- a/PokemonWorld-Gateway/src/main/resources/application.properties
+++ b/PokemonWorld-Gateway/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=PokemonWorld-Gateway
+
+server.port = 8080
+
+world.pokemon.url=http://localhost:8081
+world.trainer.url=http://localhost:8082
