--- a/TrainerService/src/main/resources/application.properties
+++ b/TrainerService/src/main/resources/application.properties
@@ -3,13 +3,13 @@ spring.application.name=TrainerService
 server.port=8082
 world.pokemon.url=http://localhost:8081
 
-spring.datasource.url=jdbc:h2:mem:trainer-service
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=admin
-spring.datasource.password=password
-
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.generate-ddl=true
-
-spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:trainer-service
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=admin
+#spring.datasource.password=password
+#
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.generate-ddl=true
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.h2.console.enabled=true
